Reverting back to before

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
-		<link rel="stylesheet" href="../https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="icon" href="../images/logo.png">
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="icon" href="images/logo.png">
 	</head>
 	<body class="is-preload">
 
 		<div class="topnav" id="myTopnav">
-		<a href="#home" class="active" onclick="closeOtherBars()"><img src="../images/logo.png" alt="Наш Логотип" width="40"></a>
+		<a href="#home" class="active" onclick="closeOtherBars()"><img src="images/logo.png" alt="Наш Логотип" width="40"></a>
 		<a href="#about" onclick="closeOtherBars()">О нас</a>
 		<a href="#services" onclick="closeOtherBars()">Наши услуги</a>
 		<a href="#big-fountain" onclick="closeOtherBars()">Большой фонтан</a>
 		<a href="#small-fountain" onclick="closeOtherBars()">Маленький фонтан</a>
 		<a href="#contact" onclick="closeOtherBars()">Свяжитесь с нами</a>
-		<a href="../uz/index.html" class="lang">O'z</a>
+		<a href="index_uz.html" class="lang">O'z</a>
 		<p class="underline">|</p>
-		<a href="../ru/index.html" class="lang1">Ру</a>
+		<a href="index.html" class="lang1">Ру</a>
 		<a href="javascript:void(0);" class="icon" onclick="openOtherBars()">
 			<i class="fa fa-bars"></i>
 		</a>
@@ -43,7 +43,7 @@
 						</header>
 						<div class="content">
 							<div class="gallery">
-								<a class="landscape" top="3rem"><img src="../images/gallery/fulls/fontan9.jpg" alt="" /></a>
+								<a class="landscape" top="3rem"><img src="images/gallery/fulls/fontan9.jpg" alt="" /></a>
 							</div>
 						</div>
 					</section>
@@ -61,7 +61,7 @@
 							<p>Что такое шоколадный фонтан?<br/><i><b>Шоколадный фонтан</b></i> - это настоящий фонтан, но вместо воды в нём циркулирует вкуснейший шоколад. По принципу фондю Вы можете обмакивать в шоколаде кусочки различных фруктов, печенья, зефир и т.д.
 							<br/>Шоколадный фонтан украсит Вашу свадьбу, день рождения, корпоративную вечеринку, банкет, или другое торжество и оставит у Ваших гостей сладкие и незабываемые воспоминания о Вашем празднике.</p>
 							
-							<span class="image medium"><img src="../images/logo.png" alt="Наш Логотип" width="50"></span>
+							<span class="image medium"><img src="images/logo.png" alt="Наш Логотип" width="50"></span>
 						</div>
 					</section>
 
@@ -82,9 +82,9 @@
 								<li>салфетки, шпажки, посуда</li>
 							</ul>
 						<div class="gallery">
-							<a href="../images/gallery/fulls/fontan4.jpg" class="landscape"><img src="../images/gallery/thumbs/fontan4.jpg" alt="" /></a>
-							<a href="../images/gallery/fulls/fontan2.jpg" class="portrait"><img src="../images/gallery/thumbs/fontan2.jpg" alt="" /></a>
-							<a href="../images/gallery/fulls/fontan8.jpg" class="portrait"><img src="../images/gallery/thumbs/fontan8.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan4.jpg" class="landscape"><img src="images/gallery/thumbs/fontan4.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan2.jpg" class="portrait"><img src="images/gallery/thumbs/fontan2.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan8.jpg" class="portrait"><img src="images/gallery/thumbs/fontan8.jpg" alt="" /></a>
 						</div>
 
 					</div>
@@ -99,7 +99,7 @@
 						<div class="content">
 							<br><br><br>
 							<div class="gallery">
-								<a href="../images/gallery/fulls/fontan17.jpg" class="landscape"><img src="../images/gallery/thumbs/fontan17.jpg" alt="" /></a>
+								<a href="images/gallery/fulls/fontan17.jpg" class="landscape"><img src="images/gallery/thumbs/fontan17.jpg" alt="" /></a>
 							</div>
 							<ul class="feature-icons">
 								<li class="icon solid fa-balance-scale-right">Вместимость шоколада - 5 кг.</li>
@@ -166,7 +166,7 @@
 					<div class="content">
 						<br><br><br>
 						<div class="gallery">
-							<a href="../images/gallery/fulls/fontan18.jpg" class="landscape"><img src="../images/gallery/thumbs/fontan18.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/fontan18.jpg" class="landscape"><img src="images/gallery/thumbs/fontan18.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
 							<li class="icon solid fa-balance-scale-right">Вместимость шоколада - 2.5 кг.</li>
@@ -346,12 +346,12 @@
 							= "Стоимость услуги: "+"<b>"+numberWithSpaces(cost)+"</b> сум";
         	}
 			</script>
-			<script src="../assets/js/jquery.min.js"></script>
-			<script src="../assets/js/jquery.scrolly.min.js"></script>
-			<script src="../assets/js/browser.min.js"></script>
-			<script src="../assets/js/breakpoints.min.js"></script>
-			<script src="../assets/js/util.js"></script>
-			<script src="../assets/js/main.js"></script>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
