--- a/index_uz.html
+++ b/index_uz.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Шоколадный фонтан в Ташкенте ChocoParty</title>
+		<title>Shokoladli Favvora Toshkentda ChocoParty</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -14,15 +14,15 @@
 	<body class="is-preload">
 
 		<div class="topnav" id="myTopnav">
-		<a href="#home" class="active" onclick="closeOtherBars()"><img src="images/logo.png" alt="Наш Логотип" width="40"></a>
-		<a href="#about" onclick="closeOtherBars()">О нас</a>
-		<a href="#services" onclick="closeOtherBars()">Наши услуги</a>
-		<a href="#big-fountain" onclick="closeOtherBars()">Большой фонтан</a>
-		<a href="#small-fountain" onclick="closeOtherBars()">Маленький фонтан</a>
-		<a href="#contact" onclick="closeOtherBars()">Свяжитесь с нами</a>
-		<a href="uz/index.html" class="lang">O'z</a>
+		<a href="#home" class="active" onclick="closeOtherBars()"><img src="images/logo.png" alt="Bizning logotip" width="40"></a>
+		<a href="#about" onclick="closeOtherBars()">Biz haqida</a>
+		<a href="#services" onclick="closeOtherBars()">Bizning xizmatlarimiz</a>
+		<a href="#big-fountain" onclick="closeOtherBars()">Katta favvora</a>
+		<a href="#small-fountain" onclick="closeOtherBars()">Kichik favvora</a>
+		<a href="#contact" onclick="closeOtherBars()">Aloqa</a>
+		<a href="index_uz.html" class="lang1">O'z</a>
 		<p class="underline">|</p>
-		<a href="ru/index.html" class="lang1">Ру</a>
+		<a href="index.html" class="lang">Ру</a>
 		<a href="javascript:void(0);" class="icon" onclick="openOtherBars()">
 			<i class="fa fa-bars"></i>
 		</a>
@@ -35,7 +35,7 @@
 					<section id="home">
 						<header>
 							<br><br><br>
-							<h1>Шоколадный фонтан в Ташкенте ChocoParty</h1>
+							<h1>Shokoladli Favvora Toshkentda ChocoParty</h1>
 							<p></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
@@ -43,7 +43,7 @@
 						</header>
 						<div class="content">
 							<div class="gallery">
-								<a class="landscape" top="3rem"><img src="images/gallery/fulls/fontan9.jpg" alt="" /></a>
+								<a class="landscape" top="3rem"><img src="images/gallery/fulls/fontan9.jpg" alt="Shokoladli favvoralar" /></a>
 							</div>
 						</div>
 					</section>
@@ -52,14 +52,16 @@
 					<section id="about">
 						<header>
 						<br><br><br>
-							<h2>Аренда шоколадного фонтана</h2>
+							<h2>Shokoladli favvora ijarasi</h2>
 						</header>
 						<div class="content">
 							<br><br><br>
-							<p><b><i>Уважаемые Дамы и Господа!</i></b></br>Наша компания <b><i>ChocoParty</i></b> рада предложить Вам оригинальный способ сделать Ваш праздник ещё более ярким и незабываемым
-							!</p>
-							<p>Что такое шоколадный фонтан?<br/><i><b>Шоколадный фонтан</b></i> - это настоящий фонтан, но вместо воды в нём циркулирует вкуснейший шоколад. По принципу фондю Вы можете обмакивать в шоколаде кусочки различных фруктов, печенья, зефир и т.д.
-							<br/>Шоколадный фонтан украсит Вашу свадьбу, день рождения, корпоративную вечеринку, банкет, или другое торжество и оставит у Ваших гостей сладкие и незабываемые воспоминания о Вашем празднике.</p>
+						
+							<p><b><i>Xonimlar va janoblar!</i></b></br>Bizning <b><i>ChocoParty</i></b> kompaniyamiz sizga bayramingizni 
+								yanada yorqinroq va unutilmas qilishning original usulini taklif qilishdan mamnun!
+							</p>
+							<p>Shokoladli favvora nima?<br/><i><b>Shokoladli favvorasi </b></i> - bu haqiqiy favvora, lekin unda suv o'rniga mazali shokolad aylanadi. Fondu printsipiga ko'ra, siz shokoladga turli xil mevalar, pechene, marshmallow va hokazo bo'laklarini botirishingiz mumkin.
+							<br/>Shokolad favvorasi to'y, tug'ilgan kun, korporativ ziyofat, banket yoki boshqa bayramlarni bezatadi va mehmonlaringizga bayramingizning shirin va unutilmas xotiralarini qoldiradi.</p>
 							
 							<span class="image medium"><img src="images/logo.png" alt="Наш Логотип" width="50"></span>
 						</div>
@@ -69,17 +71,17 @@
 				<section id="services">
 					<header>
 						<br><br><br>
-						<h2>Наши услуги</h2>
+						<h2>Bizning hizmatlarimiz</h2>
 					</header>
 					<div class="content">
 						<br><br><br>
-						<p><strong>В наши услуги входит:</strong></p>
+						<p><strong>Bizning xizmatlarimizga quyidagilar kiradi:</strong></p>
 						<div class="content">
 							<ul>
-								<li>доставка, сборка</li>
-								<li>профессиональное обслуживание</li>
-								<li>украшение стола и нарезка фруктов</li>
-								<li>салфетки, шпажки, посуда</li>
+								<li>yetkazib berish, yig'ish</li>
+								<li>professional xizmat</li>
+								<li>stol bezash va mevalarni kesish</li>
+								<li>salfetkalar, sihlar, idishlar</li>
 							</ul>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan4.jpg" class="landscape"><img src="images/gallery/thumbs/fontan4.jpg" alt="" /></a>
@@ -94,7 +96,7 @@
 					<section id="big-fountain">
 						<header>
 							<br><br><br>
-							<h2>Большой шоколадный фонтан</h2>
+							<h2>Katta shokoladli favvora</h2>
 						</header>
 						<div class="content">
 							<br><br><br>
@@ -102,57 +104,57 @@
 								<a href="images/gallery/fulls/fontan17.jpg" class="landscape"><img src="images/gallery/thumbs/fontan17.jpg" alt="" /></a>
 							</div>
 							<ul class="feature-icons">
-								<li class="icon solid fa-balance-scale-right">Вместимость шоколада - 5 кг.</li>
-								<li class="icon solid fa-layer-group">4 яруса</li>
-								<li class="icon solid fa-arrows-alt-v">Высота - 60 см</li>
-								<li class="icon solid fa-user-friends">Прекрасно подойдёт для торжест с количеством гостей 60 персон и более</li>
+								<li class="icon solid fa-balance-scale-right">Shokolad sig'imi - 5 kg.</li>
+								<li class="icon solid fa-layer-group">4 qavat</li>
+								<li class="icon solid fa-arrows-alt-v">Balandligi - 60 sm</li>
+								<li class="icon solid fa-user-friends">60 yoki undan ko'p mehmon bilan bayramlar uchun juda mos keladi</li>
 								<div class="fields">
-									<p><strong>Тариф: </strong></p>
+									<p><strong>Tariflar: </strong></p>
 									<div class="field half">
 										<input type="radio" value="tarif-optima" id="tarif-optima" name="tarif" onclick="updateCostBig()">
 										<label for="tarif-optima">
-											<b>Оптима</b>
-											<br>&#x2022;  5 килограмм лучшего бельгийского шоколада
-											<br>&#x2022;  500 грамм бельгийского какао масла
+											<b>Optima</b>
+											<br>&#x2022;  5 kg eng yuqori sifatli Belgiya shokoladi
+											<br>&#x2022;  500 gramm Belgiya kakao moyi
 										</label>
 									</div>
 									<div class="field half">
 										<input type="radio" value="tarif-maxima" id="tarif-maxima" name="tarif" checked onclick="updateCostBig()">
 										<label for="tarif-maxima">
-											<b>Максима</b>
-											<br>&#x2022;  5 килограмм лучшего бельгийского шоколада
-											<br>&#x2022;  500 грамм бельгийского какао масла
-											<br>&#x2022;  1 кг маршмеллоу
-											<br>&#x2022;  5 кг сезонных фруктов
-											<br>&#x2022;  2 кг клубники
-											<br>&#x2022;  красивая нарезка фруктов
+											<b>Maxima</b>
+											<br>&#x2022;  5 kg eng yuqori sifatli Belgiya shokoladi
+											<br>&#x2022;  500 gramm Belgiya kakao moyi
+											<br>&#x2022;  1 kg marshmellou
+											<br>&#x2022;  5 kg mavsumiy mevalar
+											<br>&#x2022;  2 kg qulupnay
+											<br>&#x2022;  mevalarni chiroyli kesish
 										</label>
 									</div>
 								</div>
 								<div class="fields">
-									<p><strong>Вид шоколада: </strong></p>
+									<p><strong>Shokolad turi: </strong></p>
 									<div class="field half" style="float: left; width: 50%;">
 										<input type="radio" id="milk" value="milk" name="choco-type" checked onclick="updateCostBig()">
-										<label for="milk">Молочный</label>
+										<label for="milk">Sutli shokolad</label>
 									</div>
 									<div class="field half" style="float: left; width: 50%;">
 										<input type="radio" id="white" value="white" name="choco-type" onclick="updateCostBig()">
-										<label for="white">Белый</label>
+										<label for="white">Oq shokolad</label>
 									</div>
 									<div class="field half" style="float: left; width: 50%;">
 										<input type="radio" id="orange" value="orange" name="choco-type" onclick="updateCostBig()">
-										<label for="orange">Апельсиновый</label>
+										<label for="orange">Apelsin shokolad</label>
 									</div>
 									<div class="field half" style="float: left; width: 50%;">
 										<input type="radio" id="strawberry" value="strawberry" name="choco-type" onclick="updateCostBig()">
-										<label for="strawberry">Клубничный</label>
+										<label for="strawberry">Qulupnay shokolad</label>
 									</div>
 									<div class="field half" style="float: left; width: 50%;">
 										<input type="radio" id="lime" value="lime" name="choco-type" onclick="updateCostBig()">
-										<label for="lime">Лайм</label>
+										<label for="lime">Laym shokolad</label>
 									</div>
 								</div>
-								<li class="icon solid fa-solid fa-money-bill-wave" id="cost-big">Стоимость услуги: <b>3 900 000</b> сум</li>
+								<li class="icon solid fa-solid fa-money-bill-wave" id="cost-big">Xizmat narxi: <b>3 900 000</b> so'm</li>
 							</ul>
 						</div>
 					</section>
@@ -161,7 +163,7 @@
 				<section id="small-fountain">
 					<header>
 						<br><br><br>
-						<h2>Маленький шоколадный фонтан</h2>
+						<h2>Kichik shokoladli favvora</h2>
 					</header>
 					<div class="content">
 						<br><br><br>
@@ -169,57 +171,57 @@
 							<a href="images/gallery/fulls/fontan18.jpg" class="landscape"><img src="images/gallery/thumbs/fontan18.jpg" alt="" /></a>
 						</div>
 						<ul class="feature-icons">
-							<li class="icon solid fa-balance-scale-right">Вместимость шоколада - 2.5 кг.</li>
-							<li class="icon solid fa-layer-group">3 яруса</li>
-							<li class="icon solid fa-arrows-alt-v">Высота - 40 см</li>
-							<li class="icon solid fa-user-friends">Отлично подойдёт для праздников с количеством гостей до 30 персон</li>
+							<li class="icon solid fa-balance-scale-right">Shokolad sig'imi - 2.5 kg.</li>
+							<li class="icon solid fa-layer-group">3 qavat</li>
+							<li class="icon solid fa-arrows-alt-v">Balandligi - 40 sm</li>
+							<li class="icon solid fa-user-friends">30 tagacha mehmon bo'lgan partiyalar uchun juda mos keladi</li>
 							<div class="fields">
-								<p><strong>Тариф: </strong></p>
+								<p><strong>Tariflar: </strong></p>
 								<div class="field half">
 									<input type="radio" value="tarif-optima-small" id="tarif-optima-small" name="tarif-small" onclick="updateCostSmall()">
 									<label for="tarif-optima-small">
-										<b>Оптима</b>
-										<br>&#x2022;  2.5 килограмм лучшего бельгийского шоколада
-										<br>&#x2022;  250 грамм бельгийского какао масла
+										<b>Optima</b>
+										<br>&#x2022;  2.5 kilogramm eng yuqori sifatli Belgiya shokoladi
+										<br>&#x2022;  250 gramm Belgiya kakao moyi
 									</label>
 								</div>
 								<div class="field half">
 									<input type="radio" value="tarif-maxima-small" id="tarif-maxima-small" name="tarif-small" checked onclick="updateCostSmall()">
 									<label for="tarif-maxima-small">
 										<b>Maxima</b>
-										<br>&#x2022;  2.5 килограмм лучшего бельгийского шоколада
-										<br>&#x2022;  250 грамм бельгийского какао масла
-										<br>&#x2022;  500 грамм маршмеллоу
-										<br>&#x2022;  2.5 кг сезонных фруктов
-										<br>&#x2022;  1 кг клубники
-										<br>&#x2022;  красивая нарезка фруктов
+										<br>&#x2022;  2.5 kilogramm eng yuqori sifatli Belgiya shokoladi
+										<br>&#x2022;  250 gramm Belgiya kakao moyi
+										<br>&#x2022;  500 gramm marshmellou
+										<br>&#x2022;  2.5 kg mavsumiy mevalar
+										<br>&#x2022;  1 kg qulupnay
+										<br>&#x2022;  mevalarni chiroyli kesish
 									</label>
 								</div>
 							</div>
 							<div class="fields">
-								<p><strong>Вид шоколада: </strong></p>
+								<p><strong>Shokolad turi: </strong></p>
 								<div class="field half" style="float: left; width: 50%;">
 									<input type="radio" id="milk-small" value="milk-small" name="choco-type-small" checked onclick="updateCostSmall()">
-									<label for="milk-small">Молочный</label>
+									<label for="milk-small">Sutli shokolad</label>
 								</div>
 								<div class="field half" style="float: left; width: 50%;">
 									<input type="radio" id="white-small" value="white-small" name="choco-type-small" onclick="updateCostSmall()">
-									<label for="white-small">Белый</label>
+									<label for="white-small">Oq shokolad</label>
 								</div>
 								<div class="field half" style="float: left; width: 50%;">
 									<input type="radio" id="orange-small" value="orange-small" name="choco-type-small" onclick="updateCostSmall()">
-									<label for="orange-small">Апельсиновый</label>
+									<label for="orange-small">Apelsin shokolad</label>
 								</div>
 								<div class="field half" style="float: left; width: 50%;">
 									<input type="radio" id="strawberry-small" value="strawberry-small" name="choco-type-small" onclick="updateCostSmall()">
-									<label for="strawberry-small">Клубничный</label>
+									<label for="strawberry-small">Qulupnay shokolad</label>
 								</div>
 								<div class="field half" style="float: left; width: 50%;">
 									<input type="radio" id="lime-small" value="lime-small" name="choco-type-small" onclick="updateCostSmall()">
-									<label for="lime-small">Лайм</label>
+									<label for="lime-small">Laym shokolad</label>
 								</div>
 							</div>
-							<li class="icon solid fa-solid fa-money-bill-wave" id="cost-small">Стоимость услуги: <b>2 500 000</b> сум</li>
+							<li class="icon solid fa-solid fa-money-bill-wave" id="cost-small-uz">Xizmat narxi: <b>2 500 000</b> so'm</li>
 						</ul>
 					</div>
 				</section>
@@ -229,23 +231,22 @@
 					<section id="contact">
 						<header>
 							<br><br><br><br>
-							<h2>Свяжитесь с нами</h2>
+							<h2>Biz bilan bog'laning</h2>
 						</header>
 						<div class="content">
 							<br><br><br><br>
 							<ul class="items">
 								<li>
-									<h3>Email</h3>
-									<a href=mailto:info@chocoparty.uz>info@chocoparty.uz</a>
+									<h3>Elektron pochta</h3>
+									<a href="#">info@chocoparty.uz</a>
 								</li>
 								<li>
-									<h3>Телефон</h3>
-									<!-- <a href="#">(000) 000-0000</a> -->
+									<h3>Telefon</h3>
 									+998(90)-0976567
 								</li>
 								<li>
-									<h3>Имя</h3>
-									Темур
+									<h3>Ism</h3>
+									Temur
 								</li>
 								<li>
 									<ul class="icons">
@@ -310,8 +311,7 @@
 					cost += 3200000
 				}
 
-				document.getElementById("cost-big").innerHTML
-							= "Стоимость услуги: "+"<b>"+numberWithSpaces(cost)+"</b> сум";
+				document.getElementById("cost-big").innerHTML = "Xizmat narxi: "+"<b>"+numberWithSpaces(cost)+"</b> so'm";
         	}
 			function updateCostSmall() {
 				var tarif = document.getElementsByName('tarif-small');
@@ -341,9 +341,7 @@
 				else if(chosen_choco=="white-small" || chosen_choco=="orange-small" || chosen_choco=="strawberry-small" || chosen_choco=="lime-small"){
 					cost += 1700000
 				}
-
-				document.getElementById("cost-small").innerHTML
-							= "Стоимость услуги: "+"<b>"+numberWithSpaces(cost)+"</b> сум";
+				document.getElementById("cost-small-uz").innerHTML = "Xizmat narxi: "+"<b>"+numberWithSpaces(cost)+"</b> so'm";
         	}
 			</script>
 			<script src="assets/js/jquery.min.js"></script>
