--- a/index_uz.html
+++ b/index_uz.html
@@ -115,7 +115,7 @@
 										<label for="tarif-optima">
 											<b>Optima</b>
 											<br>&#x2022;  5 kg eng yuqori sifatli Belgiya shokoladi
-											<br>&#x2022;  500 gramm Belgiya kakao moyi
+											<br>&#x2022;  0.5 kg Belgiya kakao moyi
 										</label>
 									</div>
 									<div class="field half">
@@ -123,8 +123,9 @@
 										<label for="tarif-maxima">
 											<b>Maxima</b>
 											<br>&#x2022;  5 kg eng yuqori sifatli Belgiya shokoladi
-											<br>&#x2022;  500 gramm Belgiya kakao moyi
-											<br>&#x2022;  1 kg marshmellou
+											<br>&#x2022;  0.5 kg Belgiya kakao moyi
+											<br>&#x2022;  1 kg tabiiy sharbatli marshmellou
+											<br>&#x2022;  1 kg profiterol
 											<br>&#x2022;  5 kg mavsumiy mevalar
 											<br>&#x2022;  2 kg qulupnay
 											<br>&#x2022;  mevalarni chiroyli kesish
@@ -181,17 +182,18 @@
 									<input type="radio" value="tarif-optima-small" id="tarif-optima-small" name="tarif-small" onclick="updateCostSmall()">
 									<label for="tarif-optima-small">
 										<b>Optima</b>
-										<br>&#x2022;  2.5 kilogramm eng yuqori sifatli Belgiya shokoladi
-										<br>&#x2022;  250 gramm Belgiya kakao moyi
+										<br>&#x2022;  2.5 kg eng yuqori sifatli Belgiya shokoladi
+										<br>&#x2022;  0.25 kg Belgiya kakao moyi
 									</label>
 								</div>
 								<div class="field half">
 									<input type="radio" value="tarif-maxima-small" id="tarif-maxima-small" name="tarif-small" checked onclick="updateCostSmall()">
 									<label for="tarif-maxima-small">
 										<b>Maxima</b>
-										<br>&#x2022;  2.5 kilogramm eng yuqori sifatli Belgiya shokoladi
-										<br>&#x2022;  250 gramm Belgiya kakao moyi
-										<br>&#x2022;  500 gramm marshmellou
+										<br>&#x2022;  2.5 kg eng yuqori sifatli Belgiya shokoladi
+										<br>&#x2022;  0.25 kg Belgiya kakao moyi
+										<br>&#x2022;  0.5 kg tabiiy sharbatli marshmellou
+										<br>&#x2022;  0.5 kg profiterol
 										<br>&#x2022;  2.5 kg mavsumiy mevalar
 										<br>&#x2022;  1 kg qulupnay
 										<br>&#x2022;  mevalarni chiroyli kesish
